tests/baselines/reference/propertyAccessIPC1.errors.txt
tests/cases/compiler/propertyAccessIPC1.ts(16,5): error TS95009: Cannot access user_id from the object because its interface does not contain the predicate present(user_id). Use a non-undefined type guard.
tests/cases/compiler/propertyAccessIPC1.ts(17,5): error TS95009: Cannot access screen_name from the object because its interface does not contain the predicate present(screen_name). Use a non-undefined type guard.


==== tests/cases/compiler/propertyAccessIPC1.ts (2 errors) ====
    interface PrivateMessage {
        text?: any;
        user_id?: any;
        screen_name?: any;
    } with {
        type(user_id) == number;
        type(text) == string;
        type(screen_name) == string;
        present(text);
        or(and(present(user_id), not(present(screen_name))),
            and(not(present(user_id)), present(screen_name)));
    }
    
    let msg: PrivateMessage = {text: "Hello", user_id: 123};
    msg.text; //OK
    msg.user_id; //NOT OK: fields that are not always required may only be accessed inside a non-undefined typeguard
        ~~~~~~~
!!! error TS95009: Cannot access user_id from the object because its interface does not contain the predicate present(user_id). Use a non-undefined type guard.
    msg.screen_name; //NOT OK
        ~~~~~~~~~~~
!!! error TS95009: Cannot access screen_name from the object because its interface does not contain the predicate present(screen_name). Use a non-undefined type guard.
    